<resources>
    <string name="app_name">app</string>

    <string name="description_title">앱 타이틀</string>
    <string name="error_toast">오류가 발생 했습니다.</string>

    <!--Log In Activity-->
    <string name="id_hint">이메일</string>
    <string name="password_hint">비밀번호</string>

    <string name="login">로그인</string>
    <string name="signup">회원가입</string>

    <string name="sign_in_invalid_email">잘못된 이메일 형식 입니다.</string>
    <string name="sign_in_not_found_email">이메일을 확인해 주세요.</string>
    <string name="sign_in_error_password">비밀번호를 확인해 주세요.</string>
    <string name="sign_in_error">다시 시도해 주세요.</string>

    <!--Sign Up Activity-->
    <string name="signup_title">회원가입</string>
    <string name="signup_email">이메일</string>
    <string name="signup_password">비밀번호</string>
    <string name="signup_password_check">비밀번호 확인</string>
    <string name="signup_name">이름</string>
    <string name="signup_nick_name">닉네임</string>
    <string name="signup_phone_number">휴대폰</string>
    <string name="signup_address_number">우편번호</string>
    <string name="signup_search">찾기</string>
    <string name="signup_address">주소</string>
    <string name="signup_address_detail">상세주소</string>
    <string name="signup_btn">회원가입</string>

    <string name="signup_toast_1">올바른 이메일 인지 확인해 주시기 바랍니다.</string>
    <string name="signup_toast_2">비밀번호가 일치 하지 않습니다.</string>
    <string name="signup_toast_3">동일한 계정이 있습니다.</string>
    <string name="signup_toast_4">모든 항목을 입력해 주시기 바랍니다.</string>
    <string name="signup_toast_5">다시 한번 시도해 주시기 바랍니다.</string>
    <string name="signup_toast_6">회원 가입 성공</string>

    <!--Address Search-->
    <string name="address_search_title">주소 검색</string>

    <string name="js_name">Android</string>
    <string name="js_url">javascript:sample2_execDaumPostcode();</string>
    <string name="web_view_url">https://e-um-c6abf.web.app/</string>

    <!--Main-->
    <string name="main_nav_menu_chat">채팅</string>

    <!--Profile-->
    <string name="main_nav_menu_profile">프로필</string>
    <string name="profile_fragment_label">profileFragment</string>
    <string name="description_profile_img">프로필 이미지</string>
    <string name="profile_nickname">닉네임</string>
    <string name="profile_status_message">상태 메세지</string>
    <string name="profile_name">이름</string>
    <string name="profile_phone">휴대폰</string>
    <string name="profile_phone_hint">000-0000-0000</string>
    <string name="profile_email">이메일</string>
    <string name="profile_password">비밀번호</string>
    <string name="profile_address">주소</string>
    <string name="profile_sign_out">로그아웃</string>

    <!--Password Edit-->
    <string name="password_edit_title">비밀번호 변경</string>
    <string name="password_edit_existing_title">기존 비밀번호 확인</string>
    <string name="password_edit_existing_hint">기존 비밀번호</string>
    <string name="password_edit_btn_check">확인</string>
    <string name="password_edit_new_title">새 비밀번호</string>
    <string name="password_edit_new_hint">새 비밀번호</string>
    <string name="password_edit_new_hint_check">비밀번호 확인</string>
    <string name="password_edit_btn_edit">변경</string>

    <string name="password_edit_toast_1">비밀번호 확인 완료</string>
    <string name="password_edit_toast_2">비밀번호가 틀립니다.</string>
    <string name="password_edit_toast_3">기존 비밀번호 확인이 필요합니다.</string>
    <string name="password_edit_toast_4">새 비밀번호가 일치하지 않습니다.</string>
    <string name="password_edit_toast_5">비밀번호 변경 완료</string>
    <string name="password_edit_toast_6">비밀번호 변경에 실패했습니다.</string>

    <string name="password_edit_key">newPassword</string>

    <!--Address List-->
    <string name="address_list_title">주소 목록</string>
    <string name="address_item_edit">수정</string>
    <string name="address_item_delete">삭제</string>
    <string name="address_item_hint">명칭</string>
    <string name="address_item_main">대표 주소</string>

    <string name="address_toast_1">최소 하나의 주소가 필요합니다.</string>

    <string name="address_edit_key">newAddress</string>
    <string name="address_position_key">newAddressPosition</string>
    <string name="address_management_key">addressPosition</string>

    <!--Address Management-->
    <string name="address_management_title">주소</string>
    <string name="address_management_zone_code">우편번호</string>
    <string name="address_management_search">찾기</string>
    <string name="address_management_address">주소</string>
    <string name="address_management_detail_address">상세주소</string>
    <string name="address_management_name_title">주소 이름</string>
    <string name="address_management_name">ex: 집, 학교...</string>
    <string name="address_management_save">저장</string>

    <string name="address_management_toast_1">같은 주소가 있습니다.</string>
    <string name="address_management_toast_2">같은 이름이 있습니다.</string>
    <string name="address_management_toast_4">주소를 입력해 주세요.</string>
    <string name="address_management_toast_5">주소 이름을 입력해 주세요.</string>

    <!--Friends-->
    <string name="main_nav_menu_friend">친구</string>
    <string name="friends_fragment_label">friendsFragment</string>
    <string name="friends_fragment_text">친구</string>
    <string name="friends_fragment_">friendsFragment</string>

    <!--Add Friend-->
    <string name="add_friend_title">친구 검색</string>
    <string name="add_friend_search_hint">이메일</string>
    <string name="add_friend_search">찾기</string>
    <string name="add_friend_check_message">이 계정이 맞습니까?</string>
    <string name="add_friend_request_btn">친구 요청</string>

    <string name="add_friend_request_toast_1">친구 신청 완료.</string>
    <string name="add_friend_request_toast_2">오류가 발생 했습니다.</string>
    <string name="add_friend_request_toast_3">이미 친구 입니다.</string>

    <!--Alarm-->
    <string name="add_friend_request_alarm_title">알람</string>
    <string name="add_friend_request_alarm_item_btn_ok">수락</string>
    <string name="add_friend_request_alarm_item_btn_no">거절</string>
    <string name="add_friend_request_alarm_item_message">님으로 부터 친구 요청이 들어 왔습니다.</string>
    <string name="schedule_request_alarm_item_message">님이 약속을 잡고 싶어 합니다.</string>

    <string name="add_friend_request_alarm_toast">친구 요청을 수락 했습니다.</string>

    <string name="add_friend_response_alarm_item_btn_ok">확인</string>
    <string name="add_friend_response_alarm_item_message">님이 친구 요청을 수락 했습니다</string>
    <string name="schedule_response_schedule_accept_item_message">님이 약속을 수락 했습니다</string>
    <string name="schedule_response_schedule_refuse_item_message">님이 약속을 거절 했습니다</string>


    <!--Friend Detail-->
    <string name="friend_detail_chat">채팅</string>
    <string name="friend_detail_schedule">일정</string>
    <string name="friend_detail_delete">삭제</string>
    <string name="friend_detail_chat_extra_code_key">code</string>
    <string name="friend_detail_chat_extra_email_key">email</string>
    <string name="friend_detail_chat_extra_nickname_key">nickname</string>

    <!--Chat-->
    <string name="chat_fragment_label">chatFragment</string>
    <string name="chat_fragment_edit_hint">메세지 입력</string>
    <string name="chat_fragment_">chatFragment</string>

    <!--Schedule-->
    <string name="schedule_fragment_label">scheduleFragment</string>
    <string name="schedule_extra_type_key">type</string>
    <string name="schedule_extra_date_key">date</string>
    <string name="schedule_extra_email_key">scheduleEmail</string>
    <string name="schedule_extra_key_code_key">keyCode</string>
    <string name="schedule_extra_alarm_key">alarm</string>
    <string name="schedule_extra_transport_type_key">transport</string>
    <string name="schedule_extra_nickname_key">nickname</string>
    <string name="schedule_extra_schedule_address_key">scheduleAddress</string>
    <string name="schedule_activity_title">약속 설정</string>

    <string name="schedule_activity_am">am</string>
    <string name="schedule_activity_pm">pm</string>
    <string name="schedule_activity_time_hint">00</string>
    <string name="schedule_activity_time">:</string>
    <string name="schedule_activity_start_location_hint">출발 장소</string>
    <string name="schedule_activity_schedule_location_hint">약속 장소</string>
    <string name="schedule_activity_schedule_before">전</string>
    <string name="schedule_activity_schedule_btn_request">요청</string>
    <string name="schedule_activity_schedule_btn_ok">수락</string>
    <string name="schedule_activity_schedule_btn_no">거절</string>
    <string name="schedule_request_toast_1">약속 요청을 완료 했습니다.</string>
    <string name="schedule_request_toast_2">오류가 발생 했습니다.</string>
    <string name="schedule_request_toast_3">약속 요청을 수락 했습니다.</string>
    <string name="schedule_request_toast_4">약속이 있는 시간입니다.</string>

    <string name="schedule_item_nickname">님과의 약속</string>
    <string name="schedule_item_am">오전</string>
    <string name="schedule_item_pm">오후</string>

    <string name="main_nav_menu_schedule">약속</string>

    <!--Map-->
    <string name="map_activity_title">지도</string>
    <string name="map_extra_start_address_key">startAddress</string>
    <string name="map_search_address_key">searchAddress</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>


</resources>