<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/navigation"
    app:startDestination="@id/menu_navi_profile">

    <fragment
        android:id="@+id/menu_navi_profile"
        android:name="com.app.ui.fragment.ProfileFragment"
        android:label="@string/profile_fragment_label"
        tools:layout="@layout/fragment_profile" />

    <fragment
        android:id="@+id/menu_navi_friends"
        android:name="com.app.ui.fragment.FriendsFragment"
        android:label="@string/friends_fragment_label"
        tools:layout="@layout/fragment_friends" />

    <fragment
        android:id="@+id/menu_navi_chat"
        android:name="com.app.ui.fragment.ChatFragment"
        android:label="@string/chat_fragment_label"
        tools:layout="@layout/fragment_chat" />

    <fragment
        android:id="@+id/menu_navi_schedule"
        android:name="com.app.ui.fragment.ScheduleFragment"
        android:label="@string/schedule_fragment_label"
        tools:layout="@layout/fragment_schedule" />

</navigation>