<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>

        <variable
            name="viewModel"
            type="com.presentation.EditPasswordViewModel" />
    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/main"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".ui.activity.profile.PasswordEditActivity">

        <androidx.constraintlayout.widget.Guideline
            android:id="@+id/guideline_toolbar"
            android:layout_width="wrap_content"
            android:layout_height="0dp"
            android:orientation="horizontal"
            app:layout_constraintGuide_percent="0.08" />

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/btn_back_activity"
            android:layout_width="@dimen/img_toolbar_back_button_size"
            android:layout_height="@dimen/img_toolbar_back_button_size"
            android:layout_marginStart="@dimen/margin_toolbar_back_btn"
            android:background="@drawable/ic_back"
            android:backgroundTint="@color/theme_color"
            app:layout_constraintBottom_toTopOf="@id/guideline_toolbar"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/margin_toolbar_title_start"
            android:text="@string/password_edit_title"
            android:textColor="@color/theme_color"
            android:textSize="@dimen/text_toolbar_size"
            android:textStyle="bold"
            app:layout_constraintBottom_toTopOf="@id/guideline_toolbar"
            app:layout_constraintStart_toEndOf="@id/btn_back_activity"
            app:layout_constraintTop_toTopOf="parent" />

        <View
            android:id="@+id/view_guideline"
            android:layout_width="match_parent"
            android:layout_height="@dimen/layout_default_guideline_height"
            android:background="@color/theme_color"
            app:layout_constraintEnd_toEndOf="@id/guideline_toolbar"
            app:layout_constraintStart_toStartOf="@id/guideline_toolbar"
            app:layout_constraintTop_toTopOf="@id/guideline_toolbar" />

        <TextView
            android:id="@+id/text_existing_password"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="@dimen/margin_edit_password_item_horizontal"
            android:layout_marginTop="@dimen/margin_edit_password_item_title_top"
            android:text="@string/password_edit_existing_title"
            android:textSize="@dimen/text_edit_password_item_title"
            android:textStyle="bold"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/guideline_toolbar" />

        <EditText
            android:id="@+id/edit_existing_password"
            android:layout_width="0dp"
            android:text="@={viewModel.existingPassword}"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/margin_edit_password_item_start"
            android:layout_marginTop="@dimen/margin_edit_password_item_top"
            android:autofillHints="password"
            android:background="@drawable/bg_edit_default"
            android:hint="@string/password_edit_existing_hint"
            android:inputType="textPassword"
            android:padding="@dimen/padding_edit_password_edit_box"
            android:textSize="@dimen/text_edit_password"
            app:layout_constraintEnd_toStartOf="@+id/btn_existing_password_check"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/text_existing_password" />

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/btn_existing_password_check"
            android:layout_width="wrap_content"
            android:onClick="@{()->viewModel.checkExistingPassword()}"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/margin_edit_password_btn_check_start"
            android:layout_marginEnd="@dimen/margin_edit_password_item_end"
            android:background="@drawable/bg_btn_round_hollow"
            android:text="@string/password_edit_btn_check"
            android:textColor="@color/theme_color"
            android:textSize="@dimen/text_edit_password"
            android:textStyle="bold"
            app:layout_constraintBottom_toBottomOf="@id/edit_existing_password"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@id/edit_existing_password"
            app:layout_constraintTop_toTopOf="@id/edit_existing_password" />

        <TextView
            android:id="@+id/text_new_password"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="@dimen/margin_edit_password_item_title_horizontal"
            android:layout_marginTop="@dimen/margin_edit_password_item_title_top"
            android:text="@string/password_edit_new_title"
            android:textSize="@dimen/text_edit_password_item_title"
            android:textStyle="bold"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/edit_existing_password" />

        <EditText
            android:id="@+id/edit_new_password"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@={viewModel.newPassword}"
            android:layout_marginHorizontal="@dimen/margin_edit_password_item_horizontal"
            android:layout_marginTop="@dimen/margin_edit_password_item_top"
            android:autofillHints="password"
            android:background="@drawable/bg_edit_default"
            android:hint="@string/password_edit_new_hint"
            android:inputType="textPassword"
            android:padding="@dimen/padding_edit_password_edit_box"
            android:textSize="@dimen/text_edit_password"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/text_new_password" />

        <EditText
            android:id="@+id/edit_new_password_check"
            android:layout_width="match_parent"
            android:text="@={viewModel.newCheckPassword}"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="@dimen/margin_edit_password_item_horizontal"
            android:layout_marginTop="@dimen/margin_edit_password_item_top"
            android:autofillHints="password"
            android:background="@drawable/bg_edit_default"
            android:hint="@string/password_edit_new_hint_check"
            android:inputType="textPassword"
            android:padding="@dimen/padding_edit_password_edit_box"
            android:textSize="@dimen/text_edit_password"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/edit_new_password" />

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/btn_new_password_edit"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:onClick="@{()->viewModel.editPassword()}"
            android:layout_marginHorizontal="@dimen/margin_edit_password_item_horizontal"
            android:layout_marginTop="@dimen/margin_edit_password_btn_top"
            android:background="@drawable/bg_btn_round_hollow"
            android:text="@string/password_edit_btn_edit"
            android:textColor="@color/theme_color"
            android:textSize="@dimen/text_edit_password"
            android:textStyle="bold"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/edit_new_password_check" />

    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>